--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,22 @@
-group 'com.kc'
-version '1.0-SNAPSHOT'
+plugins {
+    id "io.spring.dependency-management" version "1.0.10.RELEASE"
+}
 
+subprojects {
+    group = 'com.kc'
+    version = '0.0.1-SNAPSHOT'
+
+    apply plugin: 'java'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'java-library'
+
+    repositories {
+        jcenter()
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom("org.springframework.boot:spring-boot-dependencies:2.3.4.RELEASE")
+        }
+    }
+}
