--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ subprojects {
 
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.boot:spring-boot-dependencies:2.3.4.RELEASE")
+            mavenBom "org.springframework.boot:spring-boot-dependencies:2.3.4.RELEASE"
         }
     }
 }
